--- a/admin/group-menber.html
+++ b/admin/group-menber.html
@@ -105,7 +105,7 @@
                             </div>
                             <div class="col-lg-4">
                                 <div class="input-group input-group-sm">
-                                    <input type="text" class="form-control" placeholder="查找成员…">
+                                    <input type="text" class="form-control" placeholder="查找联系人…">
                                     <span class="input-group-addon input-group-btn cursor"><i class="glyphicon glyphicon-search"></i></span>
                                 </div>
                             </div>
