--- a/admin/settings-contacts.html
+++ b/admin/settings-contacts.html
@@ -123,7 +123,7 @@
                                     <div class="col-lg-9 small">
                                         <dl>
                                             <dt>
-                                                <a href="/home#/profile/53045947">死不靠谱夫斯基</a> &nbsp;<span class="fz10 color-grey">89人关注</span>
+                                                <a href="/admin/user-index.html">死不靠谱夫斯基</a> &nbsp;<span class="fz10 color-grey">89人关注</span>
                                             </dt>
                                             <dd>初二学生  数学达人  二等级   外向  游戏迷  小说爱好者  机器人爱好者 中学生geek党</dd>
                                             <dd>简介：小清新的女汉子一枚</dd>
@@ -150,7 +150,7 @@
                                     <div class="col-lg-9 small">
                                         <dl>
                                             <dt>
-                                                <a href="/home#/profile/53045947">炝炒空心菜</a> &nbsp;<span class="fz10 color-grey">89人关注</span> 
+                                                <a href="/admin/user-index.html">炝炒空心菜</a> &nbsp;<span class="fz10 color-grey">89人关注</span> 
                                             </dt>
                                             <dd>初二学生  数学达人  二等级   外向  游戏迷  小说爱好者  机器人爱好者 </dd>
                                             <dd>简介：小清新的女汉子一枚</dd>
