--- a/admin/user-index.html
+++ b/admin/user-index.html
@@ -143,7 +143,7 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         关注<span class="badge">20</span>人
-                        <span class="pull-right"><a href="#">全部</a></span>
+                        <span class="pull-right"><a href="settings-contacts.html">全部</a></span>
                     </div>
                     <div class="panel-body">
                         <div class="row marbottom15">
@@ -179,7 +179,7 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         被关注<span class="badge">500</span>人
-                        <span class="pull-right"><a href="#">全部</a></span>
+                        <span class="pull-right"><a href="settings-contacts.html">全部</a></span>
                     </div>
                     <div class="panel-body">
                         <div class="row marbottom15">
