--- a/admin/group-admin-manege.html
+++ b/admin/group-admin-manege.html
@@ -53,6 +53,10 @@
                                 <div class="media-body">
                                     <h4 class="group-title media-heading">Mr. 张's 高等教育 group</h4>
                                     小组
+                                    <div class="btn-group pull-right paddright13">
+                                        <a href="../admin/group-admin-manege.html" class="glyphicon glyphicon-cog cursor" title="群组管理">
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
 
@@ -61,7 +65,7 @@
                     <!-- List group -->
                     <div class="list-group">
                         <a href="group-post.html" class="list-group-item">发帖</a>
-                        <a href="group-admin-manage-member.html" class="list-group-item">成员</a>
+                        <a href="group-menber.html" class="list-group-item">成员</a>
                         <a href="group-admin-manege.html" class="list-group-item active">群组管理</a>
                     </div>
                 </div>
