--- a/admin/group-post.html
+++ b/admin/group-post.html
@@ -53,6 +53,10 @@
                                 <div class="media-body">
                                     <h4 class="group-title media-heading">Mr. 张's 高等教育 group</h4>
                                     小组
+                                    <div class="btn-group pull-right paddright13">
+                                        <a href="../admin/group-admin-manege.html" class="glyphicon glyphicon-cog cursor" title="群组管理">
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
 
