--- a/admin/group-post-details .html
+++ b/admin/group-post-details .html
@@ -123,7 +123,7 @@
                                 </a>
                                 <div class="media-body">
                                     <h5 class="media-heading"><a class="current-username" href="javascript:void(0)">Sunshine</a><span class="post-time-type">2014-09-27 22:19:12</span></h5>
-                                    <span class="current-reply-reply">中间ps的部分用蒙版把明暗涂均匀就完美了! 漂亮!</span>
+                                    <div class="current-reply-reply">中间ps的部分用蒙版把明暗涂均匀就完美了! 漂亮!</div>
                                 </div>
                             </div>
                             <div class="col-lg-12"><a href="javascript:void(0)" class="pull-right  reply-user-1">回复</a></div>
@@ -136,7 +136,21 @@
                                 </a>
                                 <div class="media-body">
                                     <h5 class="media-heading"><a class="current-username" href="javascript:void(0)">Sunshine1</a><span class="post-time-type">2014-09-27 22:19:12</span></h5>
-                                    <span class="current-reply-reply">中间ps的部分用蒙版把明暗涂均匀就完美了! 漂亮!123</span>
+                                    <div class="current-reply-reply">中间ps的部分用蒙版把明暗涂均匀就完美了! 漂亮!123</div>
+                                </div>
+                            </div>
+                            <div class="col-lg-12"><a href="javascript:void(0)" class="pull-right reply-user-1">回复</a></div>
+                        </div>
+
+                        <div class="col-lg-12">
+                            <div class="media">
+                                <a class="pull-left" href="#">
+                                    <img class="media-object" src="../img/login/u89578882-4.jpg" alt="...">
+                                </a>
+                                <div class="media-body">
+                                    <h5 class="media-heading"><a class="current-username" href="javascript:void(0)">Sunshine2</a><span class="post-time-type">2014-09-27 22:19:12</span></h5>
+                                    <div class="old-user-reply">中间ps的部分用蒙版把明暗涂均匀就完美了! 漂亮!123<a href="javascript:void(0)" class="marleft27">Sunshine1</a></div>
+                                    <div class="current-reply-reply new-reply-user-content">just so so</div>
                                 </div>
                             </div>
                             <div class="col-lg-12"><a href="javascript:void(0)" class="pull-right reply-user-1">回复</a></div>
