--- a/admin/group-post-details .html
+++ b/admin/group-post-details .html
@@ -163,12 +163,12 @@
                             <h4>你的回复</h4>
                         </div>
                         <div class="col-lg-12" style="margin-top:10px;">
-                            <div class="alert alert-warning alert-dismissible" role="alert" style="display:none">
-                                <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                                <span class="reply-content"></span><a href="javascript:void(0)" class="marleft10 reply-current-username">Sunshine</a>
+                                <div class="alert alert-warning alert-dismissible" role="alert" style="display:none">
+                                    <button type="button" class="close close-alert-warning" >&times;</button>
+                                    <span class="reply-content"></span><a href="javascript:void(0)" class="marleft10 reply-current-username">Sunshine</a>
+                                </div>
+                                <textarea class="form-control reply-textarea" id="replay-content" placeholder="输入你想说的话..." style="height:200px;"></textarea>
                             </div>
-                            <textarea class="form-control reply-textarea" id="replay-content" placeholder="输入你想说的话..." style="height:200px;"></textarea>
-                        </div>
                         <div class="col-lg-12" style="margin: 10px 0px 30px 0px;">
                             <button type="button" class="btn btn-default btn-reply pull-right" id="register">评论</button>
                         </div>
@@ -269,6 +269,9 @@
                 $(".reply-current-username").html($(this).parent().parent().children().find(".current-username").text());
                 $(".alert-dismissible").show();
                 $(".reply-textarea").focus();
+            });
+            $(".close-alert-warning").click(function () {
+                $(".alert-dismissible").hide();
             });
         })
 
