个人资料页面

--- a/admin/settings-contacts.html
+++ b/admin/settings-contacts.html
@@ -120,17 +120,25 @@
                             </a>
                             <div class="media-body pl15">
                                 <div class="row">
-                                    <div class="col-lg-9 small">
+                                    <div class="col-lg-10 small">
                                         <dl>
                                             <dt>
                                                 <a href="/admin/user-index.html">死不靠谱夫斯基</a> &nbsp;<span class="fz10 color-grey">89人关注</span>
                                             </dt>
-                                            <dd>初二学生  数学达人  二等级   外向  游戏迷  小说爱好者  机器人爱好者 中学生geek党</dd>
+                                            <dd><span class="glyphicon glyphicon-map-marker"></span>  四川 成都 锦江区 成都七中嘉祥外国语学校  &nbsp; 初二一班 </dd>
+                                            <dd>
+                                                <span class="label label-default">初二学生</span>
+                                                <span class="label label-primary">数学达人</span>
+                                                <span class="label label-success">中学生geek党</span>
+                                                <span class="label label-info">机器人爱好者</span>
+                                                <span class="label label-warning">小说爱好者</span>
+                                                <span class="label label-danger">游戏迷</span>
+                                            </dd>
                                             <dd>简介：小清新的女汉子一枚</dd>
-                                            <dd><span class="glyphicon glyphicon-map-marker"></span>  四川 成都 锦江区 成都七中嘉祥外国语学校</dd>
+                                            
                                         </dl>
                                     </div>
-                                    <div class="col-lg-3">
+                                    <div class="col-lg-2">
                                         <button class="btn btn-sm btn-success">
                                             <span class="glyphicon glyphicon-plus"></span>   加关注
                                         </button>
@@ -147,17 +155,25 @@
                             </a>
                             <div class="media-body pl15">
                                 <div class="row">
-                                    <div class="col-lg-9 small">
+                                    <div class="col-lg-10 col-sm-12 small">
                                         <dl>
                                             <dt>
                                                 <a href="/admin/user-index.html">炝炒空心菜</a> &nbsp;<span class="fz10 color-grey">89人关注</span> 
                                             </dt>
-                                            <dd>初二学生  数学达人  二等级   外向  游戏迷  小说爱好者  机器人爱好者 </dd>
+                                            <dd><span class="glyphicon glyphicon-map-marker"></span>  四川 成都 锦江区 成都七中嘉祥外国语学校  &nbsp; 初二一班 </dd>
+                                            <dd> 
+                                                <span class="label label-default">初二学生</span>
+                                                <span class="label label-primary">数学达人</span>
+                                                <span class="label label-success">中学生geek党</span>
+                                                <span class="label label-info">机器人爱好者</span>
+                                                <span class="label label-warning">小说爱好者</span>
+                                                <span class="label label-danger">游戏迷</span>
+                                            </dd>
                                             <dd>简介：小清新的女汉子一枚</dd>
-                                            <dd><span class="glyphicon glyphicon-map-marker"></span>  四川 成都 锦江区 成都七中嘉祥外国语学校</dd>
+                                           
                                         </dl>
                                     </div>
-                                    <div class="col-lg-3">
+                                    <div class="col-lg-2 col-sm-12">
                                         <button class="btn btn-sm btn-success">
                                             <span class="glyphicon glyphicon-plus"></span>   加关注
                                         </button>
