--- a/admin/user-index-info.html
+++ b/admin/user-index-info.html
@@ -11,7 +11,7 @@
 
     <link rel="icon" href="../favicon.ico">
 
-    <title>个人主页 — 奇异点・qiyidea.com | 在校学生创业平台</title>
+    <title>个人信息详情 — 奇异点・qiyidea.com | 在校学生创业平台</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../dist/css/bootstrap.min.css" rel="stylesheet">
@@ -45,7 +45,7 @@
             <div class="panel-body panel-default">
                 <div class="media">
                     <div class="pull-left">
-                        <a href="../admin/user-index-info.html#">
+                        <a href="../admin/user-index-info.html">
                             <img class="media-object img-rounded" src="../img/default_avatar.gif" alt="..." style="width:130px; height:130px;">
                         </a>
                         <div class="ptb5">
@@ -232,143 +232,73 @@
                     </div>
                 </div>
 
-                <div class="tabbable" id="tabs-736012">
-                    <!-- Only required for left/right tabs -->
-                    <ul class="nav nav-tabs" style="background: #F3F5F6; border-top: 1px solid #dddddd;box-shadow: 0 1px 2px rgba(0, 0, 0, 0.4); padding:0px; margin:0;">
-                        <li class="active"><a href="#panel-1" data-toggle="tab"><i class="glyphicon glyphicon-edit"></i>&nbsp; TA发起的项目</a></li>
-                        <li><a href="#panel-2" data-toggle="tab"><i class="glyphicon glyphicon-question-sign"></i>&nbsp; TA参加的项目</a></li>
-                        <li class=""><a href="#panel-3" data-toggle="tab"><i class="glyphicon glyphicon-warning-sign"></i>&nbsp; TA支持的项目</a></li>
-                        <li><a href="#panel-4" data-toggle="tab"><i class="glyphicon glyphicon-ok-circle"></i>&nbsp; TA关注的项目</a></li>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <a href="user-index.html">死不靠谱夫斯基</a> 的详细资料
+                        <span class="pull-right"><a href="user-index.html">返回个人主页</a></span>
+                    </div>
+                    <div class="panel-body">
+                        
 
-
-
-                    </ul>
-                    <div class="tab-content" style="background: white; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.4); padding:20px; ">
-                        <div class="tab-pane active" id="panel-1">
-
-                            <div class="row">
-                                <div class="col-sm-6 col-md-4">
-                                    <div class="thumbnail">
-                                        <a href="#"><img alt="项目简介内容，长度200字以内" title="项目简介内容，长度200字以内" src="../img/project/5.jpg"></a>
-                                        <div class="caption">
-                                            <h5><a href="#" title="有梦想，就有新世界——扶持创业人计划">有梦想，就有新世界——扶持创业人计划</a> </h5>
-                                            <label class="small"> 项目经理： <strong><a href="#">王二者一</a></strong></label>
-                                        </div>
-                                        <div class="progress">
-                                            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-                                                <span class="sr-only">60% 完成</span>
-                                            </div>
-                                        </div>
-                                        <div class="item-rate clearfix small">
-                                            <span class="rate1">
-                                                <em>60%</em><br>已达
-                                            </span>
-                                            <span class="rate2">
-                                                <em>￥1,247</em><br>已筹资
-                                            </span>
-                                            <span class="rate3">
-                                                <em>16天</em><br>剩余时间
-                                            </span>
-                                        </div>
-
-                                    </div>
+                        <form class="form-horizontal" method="post" role="form">
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label" for="inputEmail">登录名</label>
+                                <div class="col-sm-9">
+                                    <span>otnp50@hotmail.com</span>
                                 </div>
-                                <div class="col-sm-6 col-md-4">
-                                    <div class="thumbnail">
-                                        <a href="#"><img alt="项目简介内容，长度200字以内" title="项目简介内容，长度200字以内" src="../img/project/6.jpg"></a>
-                                        <div class="caption">
-                                            <h5><a href="#" title="BelayCords - Reversible USB Charging Cords iPhone & Android">BelayCords - Reversible USB Charging Cords iPhone…</a> </h5>
-                                            <label class="small"> 项目经理： <strong><a href="#">Made In College</a></strong></label>
-                                        </div>
-                                        <div class="progress">
-                                            <div class="progress-bar" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%;">
-                                                <span class="sr-only">10% 完成</span>
-                                            </div>
-                                        </div>
-                                        <div class="item-rate clearfix small">
-                                            <span class="rate1">
-                                                <em>10%</em><br>已达
-                                            </span>
-                                            <span class="rate2">
-                                                <em>￥1,247</em><br>已筹资
-                                            </span>
-                                            <span class="rate3">
-                                                <em>10天</em><br>剩余时间
-                                            </span>
-                                        </div>
-
-                                    </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label" for="inputNick">昵称</label>
+                                <div class="col-sm-9">
+                                    <label class="control-label fz10">天高任我飞</label>
                                 </div>
-                                <div class="col-sm-6 col-md-4">
-                                    <div class="thumbnail">
-                                        <a href="#"><img alt="项目简介内容，长度200字以内" title="项目简介内容，长度200字以内" src="../img/project/7.jpg"></a>
-                                        <div class="caption">
-                                            <h5><a href="#" title="一花一草一清皂，让我们一起“皂”化时光">一花一草一清皂，让我们一起“皂”化时光</a> </h5>
-                                            <label class="small"> 项目经理： <strong><a href="#">王二者一</a></strong></label>
-                                        </div>
-                                        <div class="progress">
-                                            <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;">
-                                                <span class="sr-only">100% 完成</span>
-                                            </div>
-                                        </div>
-                                        <div class="item-rate clearfix small">
-                                            <span class="rate1">
-                                                <em>110%</em><br>已达
-                                            </span>
-                                            <span class="rate2">
-                                                <em>￥5,247</em><br>已筹资
-                                            </span>
-                                            <span class="rate3">
-                                                <em>1天</em><br>剩余时间
-                                            </span>
-                                        </div>
-
-                                    </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label" for="inputAddress">所在地</label>
+                                <div class="col-sm-9">
+                                    <label class="control-label fz10">四川 成都 锦江区</label>
                                 </div>
-
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label" for="inputSex">性别</label>
+                                <div class="col-sm-9">
+                                    <label class="control-label fz10">保密</label>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label" for="inputBirthday">生日</label>
+                                <div class="col-sm-9">
+                                    <label class="control-label fz10">1995年12月2日</label>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label" for="inputBlood">血型</label>
+                                <div class="col-sm-9">
+                                    <label class="control-label fz10" >A</label>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label" for="inputQQ">QQ</label>
+                                <div class="col-sm-9">
+                                    <label class="control-label fz10">326564555</label>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label" for="inputWeibo">新浪微博</label>
+                                <div class="col-sm-9">
+                                    <label class="control-label fz10">otnpr@sss.com</label>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label" for="inputSelf">自我介绍</label>
+                                <div class="col-sm-9">
+                                    <label class="control-label fz10">这家伙很懒，什么也没有留下。</label>
+                                </div>
                             </div>
 
-                        </div>
-                        <div class="tab-pane" id="panel-2">
-                            <div class="row">
 
-                                <div class="col-sm-6 col-md-4">
-                                    <div class="thumbnail">
-                                        <a href="#"><img alt="项目简介内容，长度200字以内" title="项目简介内容，长度200字以内" src="../img/project/7.jpg"></a>
-                                        <div class="caption">
-                                            <h5><a href="#" title="一花一草一清皂，让我们一起“皂”化时光">一花一草一清皂，让我们一起“皂”化时光</a> </h5>
-                                            <label class="small"> 项目经理： <strong><a href="#">王二者一</a></strong></label>
-                                        </div>
-                                        <div class="progress">
-                                            <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;">
-                                                <span class="sr-only">100% 完成</span>
-                                            </div>
-                                        </div>
-                                        <div class="item-rate clearfix small">
-                                            <span class="rate1">
-                                                <em>110%</em><br>已达
-                                            </span>
-                                            <span class="rate2">
-                                                <em>￥5,247</em><br>已筹资
-                                            </span>
-                                            <span class="rate3">
-                                                <em>1天</em><br>剩余时间
-                                            </span>
-                                        </div>
-
-                                    </div>
-                                </div>
-
-                            </div>
-
-                        </div>
-                        <div class="tab-pane" id="panel-3" contenteditable="true">
-                            <p>第3部分内容.</p>
-                        </div>
-                        <div class="tab-pane" id="panel-4" contenteditable="true">
-                            <p>第4部分内容.</p>
-                        </div>
-
+                             
+                        </form>
 
                     </div>
                 </div>
