群组列表分页

--- a/admin/group-post.html
+++ b/admin/group-post.html
@@ -273,7 +273,7 @@
                 <div class="panel panel-default">
                     <div class="panel-heading panel-danger">
                         <div class="row">
-                            <div class="col-lg-6">最新消息</div>
+                            <div class="col-lg-6">我的群组话题</div>
                             <div class="col-lg-6 text-right">
                                 <!-- Small button group -->
                                 <div class="btn-group">
@@ -289,43 +289,47 @@
                             </div>
                         </div>
                     </div>
-                    <div class="panel-body" style=" padding:0px 15px 0px 15px;">
+                    <div class="panel-body">
                         <!-------------------------------------帖子信息----------------------------------------->
-                        <div class="row border-doil">
+                        <div class="row border-doil ptb5">
                             <div class="col-lg-8 title-type">
                                 <a href="group-post-details .html" title="这个世界上再没有一件比自己开店更美好的事情了！比特城邦峨眉店股东招募正在进行中！" class="title title-hover-bolor">这个世界上再没有一件比自己开店更美好的事情了！比特城邦峨眉店股东招募正在进行中！</a>
                             </div>
                             <div class="col-lg-4">
-                                <div class="col-lg-4 padding0">
+                                <div class="col-lg-4 padding0  small color-grey">
                                     12回应
                                 </div>
-                                <div class="col-lg-5 padding0">
+                                <div class="col-lg-5 padding0  small color-grey">
                                     18分钟前
                                 </div>
-                                <div class="col-lg-3 padding0">
-                                    <a href="javascript:void(0)" class="title-hover-bolor">Sunshine</a>
+                                <div class="col-lg-3 padding0 text-right">
+                                    <a href="user-index.html" class="title-hover-bolor small">Sunshine</a>
                                 </div>
                             </div>
                         </div>
-                        <div class="row border-doil">
+                        
+                        <div class="row border-doil ptb5">
                             <div class="col-lg-8 title-type">
                                 <a href="group-post-details .html" title=" 这个世界上再没有一件比自己开店更美好的事情了！比特城邦峨眉店股东招募正在进行中！" class="title title-hover-bolor">这个世界上再没有一件比自己开店更美好的事情了！比特城邦峨眉店股东招募正在进行中！</a>
                             </div>
                             <div class="col-lg-4">
-                                <div class="col-lg-4 padding0">
+                                <div class="col-lg-4 padding0 small color-grey">
                                     1234回应
                                 </div>
-                                <div class="col-lg-5 padding0">
+                                <div class="col-lg-5 padding0  small color-grey">
                                     2014-09-25
                                 </div>
                                 <div class="col-lg-3 padding0">
-                                    <a href="javascript:void(0)" class="title-hover-bolor">Sunshine</a>
+                                    <a href="user-index.html" class="title-hover-bolor small">Sunshine</a>
                                 </div>
                             </div>
                         </div>
                         <!-------------------------------------帖子信息----------------------------------------->
-                        <div class="row text-center">
-                            <ul class="pagination">
+                       
+                    </div>
+                    <div class="panel-footer mp0">
+                        <div class="row small">
+                            <ul class="pagination" style="margin:10px 10px 5px 25px; ">
                                 <li><a href="#">&laquo;</a></li>
                                 <li><a href="#">1</a></li>
                                 <li><a href="#">2</a></li>
