--- a/admin/user-index.html
+++ b/admin/user-index.html
@@ -71,7 +71,7 @@
                                 <span class="label label-warning">小说爱好者</span>
                                 <span class="label label-danger">游戏迷</span>
 
-                                <button class="btn btn-xs btn-success"><span class="glyphicon glyphicon-pencil small"></span> 给TA贴标签</button>
+                                <button class="btn btn-xs btn-success" onclick="window.location.href = 'user-page-tag.html'"><span class="glyphicon glyphicon-pencil small"></span> 给TA贴标签</button>
                             </dd>
                             <dd>
                                 <p class="color-grey pt10">
