--- a/admin/group-post.html
+++ b/admin/group-post.html
@@ -48,7 +48,7 @@
                         <div class="row">
                             <div class="media padd">
                                 <a class="pull-left" href="#">
-                                    <img class="media-object" src="../img/login/group-img.png" alt="...">
+                                    <img class="media-object" width="51" height="51" style="width:51px;height:51px;" src="../img/login/group-img.png" alt="...">
                                 </a>
                                 <div class="media-body">
                                     <h4 class="group-title media-heading">Mr. 张's 高等教育 group</h4>
@@ -96,7 +96,7 @@
                             <div class="col-lg-12">
                                 <div class="media">
                                     <a class="pull-left" href="#">
-                                        <img class="media-object" src="../img/login/u89578882-4.jpg" alt="...">
+                                        <img class="media-object" width="51" height="51" style="width:51px;height:51px;" src="../img/login/group-img.png" alt="...">
                                     </a>
                                     <div class="media-body">
                                         <div >
