--- a/admin/group-admin-manege.html
+++ b/admin/group-admin-manege.html
@@ -48,7 +48,7 @@
                         <div class="row">
                             <div class="media padd">
                                 <a class="pull-left" href="#">
-                                    <img class="media-object" src="../img/login/group-img.png" alt="...">
+                                    <img class="media-object" width="51" height="51" style="width:51px;height:51px;"  src="../img/login/group-img.png" alt="...">
                                 </a>
                                 <div class="media-body">
                                     <h4 class="group-title media-heading">Mr. 张's 高等教育 group</h4>
@@ -106,7 +106,7 @@
                                     <form name="img-upload" id="img-upload" method="post" enctype="multipart/form-data">
                                         <div class="col-sm-4 pull-right">
                                             <a class="userinfo-image" href="#">
-                                                <img class="media-object" src="../img/login/44_140.jpg" alt="...">
+                                                <img class="media-object" width="140" height="140" style="width:140px;height:140px;" src="../img/login/44_140.jpg" alt="...">
                                             </a>
                                             <div class="martop5">
                                                 <input type="file" name="files[]" multiple="">
@@ -191,7 +191,7 @@
                                     <!-------------------------------------管理员--------------------------------------->
                                     <div class="pull-left marleft27 martop10">
                                         <a class="pull-left text-center" href="#" title="sunshine" style="margin-right:5px;">
-                                            <img class="media-object" src="../img/login/user_normal.jpg" alt="...">
+                                            <img class="media-object" width="48" height="48" style="width:48px;height:48px;" src="../img/login/user_normal.jpg" alt="...">
                                             <div class="text-overflow">sunshine</div>
                                         </a>
                                         <div class="media-body">
@@ -200,7 +200,7 @@
                                     </div>
                                     <div class="pull-left marleft27 martop10">
                                         <a class="pull-left text-center" href="#" title="sunshine" style="margin-right:5px;">
-                                            <img class="media-object" src="../img/login/user_normal.jpg" alt="...">
+                                            <img class="media-object" width="48" height="48" style="width:48px;height:48px;" src="../img/login/user_normal.jpg" alt="...">
                                             <div class="text-overflow">sunshine</div>
                                         </a>
                                         <div class="media-body">
@@ -210,7 +210,7 @@
 
                                     <div class="pull-left marleft27 martop10">
                                         <a class="pull-left text-center" href="#" title="sunshine" style="margin-right:5px;">
-                                            <img class="media-object" src="../img/login/user_normal.jpg" alt="...">
+                                            <img class="media-object" width="48" height="48" style="width:48px;height:48px;" src="../img/login/user_normal.jpg" alt="...">
                                             <div class="text-overflow">sunshine</div>
                                         </a>
                                         <div class="media-body">
@@ -240,7 +240,7 @@
                                     <!-------------------------------------群组成员列表--------------------------------------->
                                     <div class="pull-left marleft27 martop10">
                                         <a class="pull-left text-center" href="#" title="sunshine" style="margin-right:5px;">
-                                            <img class="media-object" src="../img/login/user_normal.jpg" alt="...">
+                                            <img class="media-object" width="48" height="48" style="width:48px;height:48px;" src="../img/login/user_normal.jpg" alt="...">
                                             <div class="text-overflow">sunshine</div>
                                         </a>
                                         <div class="media-body">
@@ -252,7 +252,7 @@
 
                                     <div class="pull-left marleft27 martop10">
                                         <a class="pull-left text-center" href="#" title="sunshine" style="margin-right:5px;">
-                                            <img class="media-object" src="../img/login/user_normal.jpg" alt="...">
+                                            <img class="media-object" width="48" height="48" style="width:48px;height:48px;" src="../img/login/user_normal.jpg" alt="...">
                                             <div class="text-overflow">sunshine</div>
                                         </a>
                                         <div class="media-body">
@@ -264,7 +264,7 @@
 
                                     <div class="pull-left marleft27 martop10">
                                         <a class="pull-left text-center" href="#" title="sunshine1" style="margin-right:5px;">
-                                            <img class="media-object" src="../img/login/user_normal.jpg" alt="...">
+                                            <img class="media-object" width="48" height="48" style="width:48px;height:48px;" src="../img/login/user_normal.jpg" alt="...">
                                             <div class="text-overflow">sunshine1</div>
                                         </a>
                                         <div class="media-body">
@@ -276,7 +276,7 @@
 
                                     <div class="pull-left marleft27 martop10">
                                         <a class="pull-left text-center" href="#" title="sunshine" style="margin-right:5px;">
-                                            <img class="media-object" src="../img/login/user_normal.jpg" alt="...">
+                                            <img class="media-object" width="48" height="48" style="width:48px;height:48px;" src="../img/login/user_normal.jpg" alt="...">
                                             <div class="text-overflow">sunshine</div>
                                         </a>
                                         <div class="media-body">
@@ -288,7 +288,7 @@
 
                                     <div class="pull-left marleft27 martop10">
                                         <a class="pull-left text-center" href="#" title="sunshine" style="margin-right:5px;">
-                                            <img class="media-object" src="../img/login/user_normal.jpg" alt="...">
+                                            <img class="media-object" width="48" height="48" style="width:48px;height:48px;" src="../img/login/user_normal.jpg" alt="...">
                                             <div class="text-overflow">sunshine</div>
                                         </a>
                                         <div class="media-body">
