--- a/admin/group-post-details .html
+++ b/admin/group-post-details .html
@@ -48,7 +48,7 @@
                         <div class="row">
                             <div class="media padd">
                                 <a class="pull-left" href="#">
-                                    <img class="media-object" src="../img/login/group-img.png" alt="...">
+                                    <img class="media-object" width="51" height="51" style="width:51px;height:51px;"  src="../img/login/group-img.png" alt="...">
                                 </a>
                                 <div class="media-body">
                                     <h4 class="group-title media-heading">Mr. 张's 高等教育 group</h4>
@@ -95,7 +95,7 @@
                         <h4>这个世界上再没有一件比自己开店更美好的事情了！比特城邦峨眉店股东招募正在进行中！</h4>
                         <div class="media">
                             <a class="pull-left" href="#">
-                                <img class="media-object" src="../img/login/u56071854-3.jpg" alt="...">
+                                <img class="media-object" width="48" height="48" style="width:48px;height:48px;"  src="../img/login/u56071854-3.jpg" alt="...">
                             </a>
                             <div class="media-body">
                                 <h5 class="media-heading">来自:<a href="javascript:void(0)">Sunshine</a><span class="post-time-type">2014-09-27 22:19:12</span></h5>
@@ -119,7 +119,7 @@
                         <div class="col-lg-12">
                             <div class="media">
                                 <a class="pull-left" href="#">
-                                    <img class="media-object" src="../img/login/u89578882-4.jpg" alt="...">
+                                    <img class="media-object" width="48" height="48" style="width:48px;height:48px;" src="../img/login/u89578882-4.jpg" alt="...">
                                 </a>
                                 <div class="media-body">
                                     <h5 class="media-heading"><a class="current-username" href="javascript:void(0)">Sunshine</a><span class="post-time-type">2014-09-27 22:19:12</span></h5>
@@ -132,7 +132,7 @@
                         <div class="col-lg-12">
                             <div class="media">
                                 <a class="pull-left" href="#">
-                                    <img class="media-object" src="../img/login/u89578882-4.jpg" alt="...">
+                                    <img class="media-object" width="48" height="48" style="width:48px;height:48px;" src="../img/login/u89578882-4.jpg" alt="...">
                                 </a>
                                 <div class="media-body">
                                     <h5 class="media-heading"><a class="current-username" href="javascript:void(0)">Sunshine1</a><span class="post-time-type">2014-09-27 22:19:12</span></h5>
@@ -145,7 +145,7 @@
                         <div class="col-lg-12">
                             <div class="media">
                                 <a class="pull-left" href="#">
-                                    <img class="media-object" src="../img/login/u89578882-4.jpg" alt="...">
+                                    <img class="media-object" width="48" height="48" style="width:48px;height:48px;" src="../img/login/user_normal.jpg" alt="...">
                                 </a>
                                 <div class="media-body">
                                     <h5 class="media-heading"><a class="current-username" href="javascript:void(0)">Sunshine2</a><span class="post-time-type">2014-09-27 22:19:12</span></h5>
