--- a/admin/group-menber.html
+++ b/admin/group-menber.html
@@ -107,7 +107,32 @@
                     </div>
                     <!--------------------------组员信息------------------------------->
                     <div class="panel-body">
-                        <div class="dropdown pull-right">
+                        <div class="row marbottom15">
+                            <!-------------------------------------群组成员列表--------------------------------------->
+                            <div class="pull-left marleft27 martop10">
+                                <a class="pull-left text-center" href="#" title="sunshine" style="margin-right:5px;">
+                                    <img class="media-object" width="48" height="48" style="width:48px;height:48px;" src="../img/login/user_normal.jpg" alt="...">
+                                    <div class="text-overflow">sunshine</div>
+                                </a>
+                                <div class="media-body">
+                                    <h5 class="media-heading"><a class="add-firends" href="javascript:void(0)" data-toggle="modal" data-target=".add-firend-modal">加好友</a></h5>
+                                    <h5 class="media-heading"><a class="send-msgs" href="javascript:void(0)" data-toggle="modal" data-target=".send-msgs-modal">发消息</a></h5>
+                                </div>
+                            </div>
+
+                            <div class="pull-left marleft27 martop10">
+                                <a class="pull-left text-center" href="#" title="sunshine" style="margin-right:5px;">
+                                    <img class="media-object" width="48" height="48" style="width:48px;height:48px;" src="../img/login/user_normal.jpg" alt="...">
+                                    <div class="text-overflow">sunshine</div>
+                                </a>
+                                <div class="media-body">
+                                    <h5 class="media-heading"><a class="add-firends" href="javascript:void(0)" data-toggle="modal" data-target=".add-firend-modal">加好友</a></h5>
+                                    <h5 class="media-heading"><a class="send-msgs" href="javascript:void(0)" data-toggle="modal" data-target=".send-msgs-modal">发消息</a></h5>
+                                </div>
+                            </div>
+
+                        </div>
+                        <!--<div class="dropdown pull-right">
                             <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
                                 更多
                                 <span class="caret"></span>
@@ -137,9 +162,9 @@
                             </div>
                         </div>
                     </div>
-                    <hr style="background-color:#ddd;margin-bottom:0px;">
+                    <hr style="background-color:#ddd;margin-bottom:0px;">-->
                     <!-------------------------------------------------添加好友--------------------------------------------------->
-                    <div class="modal fade add-firend-modal" id="add-firend-modal-1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                    <!--<div class="modal fade add-firend-modal" id="add-firend-modal-1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
@@ -164,32 +189,10 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <!-------------------------------------------------发送消息--------------------------------------------------->
-                    <div class="modal fade send-msgs-modal" id="send-msgs-modal-1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                                    <h4 class="modal-title" id="myModalLabel">给<a class="kick-username" href="javascript:void(0);"></a>发送消息</h4>
-                                </div>
-                                <div class="modal-body" style="padding:20px 30px 50px 30px">
-                                    <div class="row">
-                                        <div class="col-lg-12">
-                                            <p>请输入信息：</p>
-                                            <textarea class="form-control reply-textarea" id="replay-content" placeholder="输入你想说的话..." style="height:100px;"></textarea>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                                    <button type="button" class="btn btn-primary send-msgs-yes">发送</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    </div>-->
+                   
                     <div class="panel-body">
-                        <div class="dropdown pull-right">
+                        <!--<div class="dropdown pull-right">
                             <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
                                 更多
                                 <span class="caret"></span>
@@ -221,37 +224,10 @@
                         </div>
 
                     </div>
-                    <hr style="background-color:#ddd;margin-bottom:0px;">
-                    <!-------------------------------------------------添加好友--------------------------------------------------->
-                    <div class="modal fade add-firend-modal" id="add-firend-modal-2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                                    <h4 class="modal-title" id="myModalLabel">请求加好友名字&nbsp;-&nbsp;添加好友</h4>
-                                </div>
-                                <div class="modal-body" style="padding:20px 30px 50px 30px">
-                                    <div class="row">
-                                        <div class="col-lg-2">
-                                            <img class="media-object" src="../img/default_avatar.gif" alt="80*80" title="80*80" style="height:80px; width:80px;">
-                                            <p class="is-add-firend- text-center" style="width:80px;"><a class="kick-username" href="javascript:void(0);"></a></p>
-                                        </div>
-                                        <div class="col-lg-10">
-                                            <p>请输入验证信息：</p>
-                                            <textarea class="form-control reply-textarea" id="replay-content" placeholder="我是..." style="height:100px;"></textarea>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="modal-footer">
-
-                                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                                    <button type="button" class="btn btn-primary add-firends-yes">发送</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <hr style="background-color:#ddd;margin-bottom:0px;">-->
+                    
                     <!-------------------------------------------------发送消息--------------------------------------------------->
-                    <div class="modal fade send-msgs-modal" id="send-msgs-modal-2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                    <!--<div class="modal fade send-msgs-modal" id="send-msgs-modal-2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
@@ -272,7 +248,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                     <!--------------------------组员信息------------------------------->
                 </div>
             </div>
@@ -325,6 +301,57 @@
         </div>
     </div>
 
+            <!-------------------------------------------------添加好友--------------------------------------------------->
+            <div class="modal fade add-firend-modal" id="add-firend-modal-2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    <h4 class="modal-title" id="myModalLabel"><a href="javascript:void(0)">admin</a>&nbsp;-&nbsp;添加好友</h4>
+                </div>
+                <div class="modal-body" style="padding:20px 30px 50px 30px">
+                    <div class="row">
+                        <div class="col-lg-2">
+                            <img class="media-object" src="../img/default_avatar.gif" alt="80*80" title="80*80" style="height:80px; width:80px;">
+                            <p class="is-add-firend- text-center" style="width:80px;"><a class="add-friend-name" href="javascript:void(0);"></a></p>
+                        </div>
+                        <div class="col-lg-10">
+                            <p>请输入验证信息：</p>
+                            <textarea class="form-control reply-textarea" id="replay-content" placeholder="我是..." style="height:100px;"></textarea>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+
+                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                    <button type="button" class="btn btn-primary add-firends-yes">发送</button>
+                </div>
+            </div>
+        </div>
+    </div>
+            <!-------------------------------------------------发送消息--------------------------------------------------->
+            <div class="modal fade send-msgs-modal" id="send-msgs-modal-1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    <h4 class="modal-title" id="myModalLabel">给<a class="add-friend-name" href="javascript:void(0);"></a>发送消息</h4>
+                </div>
+                <div class="modal-body" style="padding:20px 30px 50px 30px">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <p>请输入信息：</p>
+                            <textarea class="form-control reply-textarea" id="replay-content" placeholder="输入你想说的话..." style="height:100px;"></textarea>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                    <button type="button" class="btn btn-primary send-msgs-yes">发送</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <!-- Bootstrap core JavaScript
@@ -411,14 +438,22 @@
                 $(".yanzheng-msg").hide();
                 $(".queren-msg").show();
             });
-            $(".menber-info li").click(function () {
-                $(".kick-username").html($(this).parent().parent().parent().children().find(".sender-name").text());
-            });
+            //$(".menber-info li").click(function () {
+            //    $(".kick-username").html($(this).parent().parent().parent().children().find(".sender-name").text());
+            //});
             //添加好友验证
             $(".add-firends-yes").click(function () {
                 $(".add-firend-modal").modal("hide");
             });
+            //添加好友验证确定
+            $(".add-firends").click(function () {
+                $(".add-friend-name").html($(this).parent().parent().parent().children().find(".text-overflow").text());
+            });
             //发送消息
+            $(".send-msgs").click(function () {
+                $(".add-friend-name").html($(this).parent().parent().parent().children().find(".text-overflow").text());
+            });
+            //发送消息确定
             $(".send-msgs-yes").click(function () {
                 $(".send-msgs-modal").modal("hide");
             });
