--- a/admin/group-post.html
+++ b/admin/group-post.html
@@ -86,6 +86,23 @@
                     </a>
                 </div>
 
+                <div class="list-group ">
+                    <a href="#" class="list-group-item list-group-item-info active disabled nocursor">
+                        热门帖子<span class="sr-only">此列表为学校群组推荐</span>
+                    </a>
+                    <a href="group-post-details .html" class="list-group-item">Web设计小组</a>
+
+
+                    <a href="#" class="list-group-item">
+                        <div class="row">
+                            <div class="col-sm-8 col-lg-8">更多</div>
+                            <div class="col-sm-4 col-lg-4 text-right">
+                                <i class="glyphicon glyphicon-chevron-right"></i><span class="sr-only">更多</span>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
 
             </div>
             <div class="col-xs-9">
